--- a/index.html
+++ b/index.html
@@ -3,21 +3,40 @@
 <head>
      <title>Document</title>
      <link rel="stylesheet" href="styles.css">
+     <script src="https://kit.fontawesome.com/516c8139f6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="card">
       <div class="top"> 
         <div class="top-left">
-            <img src="https://i0.wp.com/allbusinessnames.com/storage/2023/03/700-Catchy-Nature-Usernames-1.png?fit=1200%2C628&ssl=1">
+          <i class="fa-brands fa-html5"></i>
+            <div>
             <h1>HTML 5</h1>
-            <div>Eberto</div>       
+            <h2>Eberto</h2>
+            </div>       
         </div>
         <div class="top-right">
-           right
+          <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
       </div>
       <div class="image">
         <img src=https://th.bing.com/th/id/R.eefd5ce4538de99e63e27071d2d07c5f?rik=%2b%2bVaekqzuoIpLg&riu=http%3a%2f%2f3.bp.blogspot.com%2f-1MzIJjPbIfA%2fVG5TmYhjmLI%2fAAAAAAACY9o%2fEO4utsuiXXA%2fs1600%2fpaisajes%2bnaturales%2bnuevas%2bfotos%2blagos%2bmonta%c3%b1as%2bflores%2by%2bbosques%2b(1).jpg&ehk=lgstEcU1Tkh9yTpfflCJp71uV1b2zH%2fyDu1XX8wbZOQ%3d&risl=&pid=ImgRaw&r=0"" alt="paisaje">
+      </div>
+      <div class="icons">
+        <div class="icon-left">
+          <i class="fa-sharp fa-regular fa-heart"></i>
+          <i class="fa-sharp fa-regular fa-comment"></i>
+          <i class="fa-sharp fa-regular fa-paper-plane"></i>
+        </div>
+        <div class="icon-right">
+          <i class="fa-sharp fa-regular fa-bookmark"></i>
+        </div>
+
+      </div>
+
+      <div class="text">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt error, quos laborum earum, quaerat laudanti</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi a quisquam accusamus quo, aliquam reiciendis similique quidem natus neque cum nesciunt amet maiores et soluta dignissimos consequuntur perspiciatis corrupti molestias.</p>
       </div>
     </div>
     
