EB insta post Terminado

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
 
       <div class="text">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt error, quos laborum earum, quaerat laudanti</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi a quisquam accusamus quo, aliquam reiciendis similique quidem natus neque cum nesciunt amet maiores et soluta dignissimos consequuntur perspiciatis corrupti molestias.</p>
+        <p>Liked by<b>4Geeks Academy, HTML5, Web</b>and <b>100,000 others</b></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi a quisquam accusamus quo, aliquam reiciendis similique quidem natus neque cum nesciunt amet maiores et soluta dignissimos consequuntur perspiciatis corruption. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum adipisci blanditiis inventore suscipit qui quibusdam sint.</p>
       </div>
     </div>
     
